[package]
name = "web_grep"
version = "0.1.0"
authors = ["oriontvv <taranov.vv@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
futures = "0.3.17"
tokio = {version = "1.12.0", features = ["full"]}
reqwest = { version = "0.11", features = ["json"] }
openssl = "0.10.36"
openssl-sys = "0.9"